# email-triage1

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  baseline.py  client.py  data.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  phase2_eval.py  pyproject.toml  requirements.txt
email_triage_openenv/: __init__.py  client.py
server/: __init__.py  app.py  ui.py
